Fix protobuf serde configuration